--- a/bluemageparty.client/package.json
+++ b/bluemageparty.client/package.json
@@ -16,9 +16,16 @@
     "vee-validate": "^4.14.7",
     "vue": "^3.5.12",
     "vue-router": "^4.4.5",
+    "vuetify": "^3.7.5",
     "yup": "^1.4.0"
   },
   "devDependencies": {
+    "@fortawesome/fontawesome-free": "^6.7.1",
+    "@fortawesome/fontawesome-svg-core": "^6.7.1",
+    "@fortawesome/free-regular-svg-icons": "^6.7.1",
+    "@fortawesome/free-solid-svg-icons": "^6.7.1",
+    "@fortawesome/vue-fontawesome": "^3.0.8",
+    "@mdi/font": "^7.4.47",
     "@tsconfig/node22": "^22.0.0",
     "@types/node": "^22.9.0",
     "@vitejs/plugin-vue": "^5.1.4",
@@ -30,6 +37,7 @@
     "typescript": "~5.6.3",
     "vite": "^5.4.10",
     "vite-plugin-vue-devtools": "^7.5.4",
+    "vue-cli-plugin-vuetify": "~2.5.8",
     "vue-tsc": "^2.1.10"
   }
 }
