--- a/bluemageparty.client/package.json
+++ b/bluemageparty.client/package.json
@@ -1,8 +1,8 @@
 {
   "name": "bluemageparty.client",
-  "version": "0.0.0",
   "private": true,
   "type": "module",
+  "version": "0.0.0",
   "scripts": {
     "dev": "vite",
     "build": "run-p type-check \"build-only {@}\" --",
@@ -12,20 +12,14 @@
     "lint": "eslint . --fix"
   },
   "dependencies": {
-    "pinia": "^2.2.6",
-    "vee-validate": "^4.14.7",
-    "vue": "^3.5.12",
-    "vue-router": "^4.4.5",
-    "vuetify": "^3.7.5",
-    "yup": "^1.4.0"
+    "@mdi/font": "7.4.47",
+    "core-js": "^3.37.1",
+    "roboto-fontface": "*",
+    "vue": "^3.4.31",
+    "vuetify": "^3.6.14"
   },
   "devDependencies": {
-    "@fortawesome/fontawesome-free": "^6.7.1",
-    "@fortawesome/fontawesome-svg-core": "^6.7.1",
-    "@fortawesome/free-regular-svg-icons": "^6.7.1",
-    "@fortawesome/free-solid-svg-icons": "^6.7.1",
-    "@fortawesome/vue-fontawesome": "^3.0.8",
-    "@mdi/font": "^7.4.47",
+    "@eslint/js": "^9.14.0",
     "@tsconfig/node22": "^22.0.0",
     "@types/node": "^22.9.0",
     "@vitejs/plugin-vue": "^5.1.4",
@@ -34,10 +28,18 @@
     "eslint": "^9.14.0",
     "eslint-plugin-vue": "^9.30.0",
     "npm-run-all2": "^7.0.1",
+    "pinia": "^2.1.7",
+    "sass": "1.77.8",
+    "sass-embedded": "^1.77.8",
     "typescript": "~5.6.3",
+    "unplugin-auto-import": "^0.17.6",
+    "unplugin-fonts": "^1.1.1",
+    "unplugin-vue-components": "^0.27.2",
+    "unplugin-vue-router": "^0.10.0",
     "vite": "^5.4.10",
-    "vite-plugin-vue-devtools": "^7.5.4",
-    "vue-cli-plugin-vuetify": "~2.5.8",
+    "vite-plugin-vue-layouts": "^0.11.0",
+    "vite-plugin-vuetify": "^2.0.3",
+    "vue-router": "^4.4.0",
     "vue-tsc": "^2.1.10"
   }
 }
