The front end can now hit the api.

--- a/BlueMageParty.Server/BlueMageParty.Server.csproj
+++ b/BlueMageParty.Server/BlueMageParty.Server.csproj
@@ -34,4 +34,9 @@
     </ProjectReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Helpers\" />
+    <Folder Include="Services\" />
+  </ItemGroup>
+
 </Project>
