--- a/BlueMageParty.Server/appsettings.json
+++ b/BlueMageParty.Server/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "BlueMagePartyContext": "Server=(localdb)\\JoeServer;Database=BlueMageParty.ConsoleApp.NewDb;Trusted_Connection=True;"
+    "BlueMagePartyContext": "Server=(localdb)\\JoeServer;Database=BlueMageParty;Trusted_Connection=True;MultipleActiveResultSets=True"
   },
   "Logging": {
     "LogLevel": {
