--- a/bluemageparty.client/package.json
+++ b/bluemageparty.client/package.json
@@ -39,6 +39,7 @@
     "unplugin-vue-components": "^0.27.2",
     "unplugin-vue-router": "^0.10.0",
     "vite": "^5.4.10",
+    "vite-plugin-mkcert": "^1.17.6",
     "vite-plugin-vue-layouts": "^0.11.0",
     "vite-plugin-vuetify": "^2.0.3",
     "vue-router": "^4.4.0",
