--- a/bluemageparty.client/package.json
+++ b/bluemageparty.client/package.json
@@ -12,12 +12,12 @@
     "lint": "eslint . --fix"
   },
   "dependencies": {
-    "@mdi/font": "7.4.47",
+    "@mdi/font": "^7.4.47",
     "axios": "^1.7.9",
     "core-js": "^3.37.1",
+    "material-design-icons-iconfont": "^6.7.0",
     "roboto-fontface": "*",
-    "vue": "^3.4.31",
-    "vuetify": "^3.6.14"
+    "vue": "^3.4.31"
   },
   "devDependencies": {
     "@eslint/js": "^9.14.0",
@@ -31,8 +31,9 @@
     "eslint-plugin-vue": "^9.30.0",
     "npm-run-all2": "^7.0.1",
     "pinia": "^2.1.7",
-    "sass": "1.77.8",
+    "sass": "^1.82.0",
     "sass-embedded": "^1.77.8",
+    "sass-loader": "^16.0.4",
     "typescript": "~5.6.3",
     "unplugin-auto-import": "^0.17.6",
     "unplugin-fonts": "^1.1.1",
@@ -42,7 +43,8 @@
     "vite-plugin-mkcert": "^1.17.6",
     "vite-plugin-vue-layouts": "^0.11.0",
     "vite-plugin-vuetify": "^2.0.3",
-    "vue-router": "^4.4.0",
-    "vue-tsc": "^2.1.10"
+    "vue-router": "^4.5.0",
+    "vue-tsc": "^2.1.10",
+    "vuetify": "^3.7.0-beta.1"
   }
 }
