--- a/BlueMageParty.Server/appsettings.json
+++ b/BlueMageParty.Server/appsettings.json
@@ -1,4 +1,12 @@
 {
+  "EmailSettings": {
+    "SmtpHost": "smtp.sendgrid.net",
+    "SmtpEmail": "noreply@bluemage.party",
+    "EmailName": "noreply"
+  },
+  "CORS": {
+    "AllowedOrigins": "http://localhost:3000"
+  },
   "ConnectionStrings": {
     "BlueMagePartyContext": "Server=(localdb)\\JoeServer;Database=BlueMageParty;Trusted_Connection=True;MultipleActiveResultSets=True"
   },
