Email verification link works.

--- a/BlueMageParty.Server/appsettings.json
+++ b/BlueMageParty.Server/appsettings.json
@@ -1,11 +1,10 @@
 {
+  "FrontendUrl": "http://localhost:3000",
+  "BackendUrl": "https://localhost:7015",
   "EmailSettings": {
     "SmtpHost": "smtp.sendgrid.net",
     "SmtpEmail": "noreply@bluemage.party",
-    "EmailName": "noreply"
-  },
-  "CORS": {
-    "AllowedOrigins": "http://localhost:3000"
+    "EmailName": "Blue Mage Party"
   },
   "ConnectionStrings": {
     "BlueMagePartyContext": "Server=(localdb)\\JoeServer;Database=BlueMageParty;Trusted_Connection=True;MultipleActiveResultSets=True"
