--- a/BlueMageParty.Server/appsettings.json
+++ b/BlueMageParty.Server/appsettings.json
@@ -1,6 +1,7 @@
 {
   "FrontendUrl": "http://localhost:3000",
   "BackendUrl": "https://localhost:7015",
+  "VerificationEmailTimeoutMinutes": "10",
   "EmailSettings": {
     "SmtpHost": "smtp.sendgrid.net",
     "SmtpEmail": "noreply@bluemage.party",
