Cleaned up all pages. Added password reset screen. Still not fully functional

--- a/BlueMageParty.Server/appsettings.json
+++ b/BlueMageParty.Server/appsettings.json
@@ -1,7 +1,8 @@
 {
   "FrontendUrl": "http://localhost:3000",
   "BackendUrl": "https://localhost:7015",
-  "VerificationEmailTimeoutMinutes": "10",
+  "EmailTimeoutMinutes": "10",
+  "EmailWaitMinutes": "1",
   "EmailSettings": {
     "SmtpHost": "smtp.sendgrid.net",
     "SmtpEmail": "noreply@bluemage.party",
