--- a/bluemageparty.client/package.json
+++ b/bluemageparty.client/package.json
@@ -31,7 +31,7 @@
     "eslint-plugin-vue": "^9.30.0",
     "npm-run-all2": "^7.0.1",
     "pinia": "^2.3.0",
-    "sass": "^1.82.0",
+    "sass": "^1.83.0",
     "sass-embedded": "^1.77.8",
     "sass-loader": "^16.0.4",
     "typescript": "~5.6.3",
@@ -45,6 +45,6 @@
     "vite-plugin-vuetify": "^2.0.3",
     "vue-router": "^4.5.0",
     "vue-tsc": "^2.1.10",
-    "vuetify": "^3.7.0-beta.1"
+    "vuetify": "^3.7.5"
   }
 }
