--- a/bluemageparty.client/package.json
+++ b/bluemageparty.client/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@mdi/font": "^7.4.47",
+    "@xivapi/js": "^0.4.5",
     "axios": "^1.7.9",
     "core-js": "^3.37.1",
     "material-design-icons-iconfont": "^6.7.0",
