fixed bugs. Discord oauth setup

--- a/BlueMageParty.Server/appsettings.Development.json
+++ b/BlueMageParty.Server/appsettings.Development.json
@@ -1,5 +1,6 @@
 {
   "FrontendUrl": "http://localhost:3000",
+  "DiscordClientKey": "1346583826457169940",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
