--- a/bluemageparty.client/.env.development
+++ b/bluemageparty.client/.env.development
@@ -1,1 +1,3 @@
 VITE_API_BASE_URL=https://localhost:7015/api
+VITE_DISCORD_CLIENT_ID=1346583826457169940
+VITE_DISCORD_REDIRECT_URI=http://localhost:3000/auth/discord/callback
