--- a/bluemageparty.client/package.json
+++ b/bluemageparty.client/package.json
@@ -15,7 +15,11 @@
     "@mdi/font": "^7.4.47",
     "axios": "^1.7.9",
     "core-js": "^3.37.1",
+    "jsonwebtoken": "^9.0.2",
     "material-design-icons-iconfont": "^6.7.0",
+    "passport": "^0.7.0",
+    "passport-discord": "^0.1.4",
+    "passport-jwt": "^4.0.1",
     "roboto-fontface": "*",
     "vue": "^3.4.31"
   },
@@ -23,7 +27,11 @@
     "@eslint/js": "^9.14.0",
     "@tsconfig/node22": "^22.0.0",
     "@types/axios": "^0.9.36",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22.9.0",
+    "@types/passport": "^1.0.17",
+    "@types/passport-discord": "^0.1.14",
+    "@types/passport-jwt": "^4.0.1",
     "@vitejs/plugin-vue": "^5.1.4",
     "@vue/eslint-config-typescript": "^14.1.3",
     "@vue/tsconfig": "^0.5.1",
