--- a/bluemageparty.client/package.json
+++ b/bluemageparty.client/package.json
@@ -13,8 +13,11 @@
   },
   "dependencies": {
     "@mdi/font": "^7.4.47",
+    "@types/gsap": "^1.20.2",
+    "animejs": "^3.2.2",
     "axios": "^1.7.9",
     "core-js": "^3.37.1",
+    "gsap": "^3.12.7",
     "jsonwebtoken": "^9.0.2",
     "material-design-icons-iconfont": "^6.7.0",
     "passport": "^0.7.0",
