--- a/bluemageparty.client/tsconfig.json
+++ b/bluemageparty.client/tsconfig.json
@@ -7,5 +7,10 @@
     {
       "path": "./tsconfig.app.json"
     }
-  ]
+  ],
+  "compilerOptions": {
+    "noEmitOnError": false,
+    "skipLibCheck": true,
+    "strict": false
+  }
 }
