--- a/bluemageparty.client/tsconfig.app.json
+++ b/bluemageparty.client/tsconfig.app.json
@@ -9,6 +9,9 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
-    }
+    },
+    "noEmitOnError": false,
+    "skipLibCheck": true,
+    "strict": false
   }
 }
