--- a/bluemageparty.client/.env.production
+++ b/bluemageparty.client/.env.production
@@ -1,1 +1,3 @@
-VITE_API_BASE_URL=https://bluemage.party
+VITE_API_BASE_URL=https://bluemageparty.azurewebsites.net/api/endpoint
+VITE_DISCORD_CLIENT_ID=1346583826457169940
+VITE_DISCORD_REDIRECT_URI=http://localhost:3000/auth/discord/callback
