Updated config file

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ BlueMageParty.Server/bin/
 BlueMageParty.Server/obj/
 bluemageparty.client/node_modules/
 node_modules/
+/BlueMageParty.Server/appsettings.Production.json
