--- a/BlueMageParty.Server/appsettings.Development.json
+++ b/BlueMageParty.Server/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "FrontendUrl": "http://localhost:3000",
-  "DiscordClientKey": "1346583826457169940",
+  "BackendUrl": "https://localhost:7015",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
