--- a/BlueMageParty.Server/publish/appsettings.json
+++ b/BlueMageParty.Server/publish/appsettings.json
@@ -1,8 +1,7 @@
 {
-  "FrontendUrl": "http://localhost:3000",
-  "BackendUrl": "https://localhost:7015",
   "EmailTimeoutMinutes": "10",
   "EmailWaitMinutes": "1",
+  "DiscordClientKey": "1346583826457169940",
   "EmailSettings": {
     "SmtpHost": "smtp.sendgrid.net",
     "SmtpEmail": "noreply@bluemage.party",
