--- a/BlueMageParty.Server/publish/publish/publish/appsettings.Development.json
+++ b/BlueMageParty.Server/publish/publish/publish/appsettings.Development.json
@@ -1,4 +1,6 @@
 {
+  "FrontendUrl": "http://localhost:3000",
+  "BackendUrl": "https://localhost:7015",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
