--- a/bluemageparty.client/.env.production
+++ b/bluemageparty.client/.env.production
@@ -1,3 +1,3 @@
-VITE_API_BASE_URL=https://bluemageparty.azurewebsites.net/api/endpoint
+VITE_API_BASE_URL=http://64.227.6.150:3000
 VITE_DISCORD_CLIENT_ID=1346583826457169940
-VITE_DISCORD_REDIRECT_URI=http://localhost:3000/auth/discord/callback
+VITE_DISCORD_REDIRECT_URI=http://64.227.6.150:3000/auth/discord/callback
