--- a/BlueMageParty.Server/appsettings.Development.json
+++ b/BlueMageParty.Server/appsettings.Development.json
@@ -6,5 +6,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "BlueMagePartyContext": "Server=(localdb)\\JoeServer;Database=BlueMageParty;Trusted_Connection=True;MultipleActiveResultSets=True"
   }
 }
