--- a/bluemageparty.client/.env.production
+++ b/bluemageparty.client/.env.production
@@ -1,3 +1,3 @@
-VITE_API_BASE_URL=http://bluemage.party:3000
+VITE_API_BASE_URL=http://localhost:7015
 VITE_DISCORD_CLIENT_ID=1346583826457169940
-VITE_DISCORD_REDIRECT_URI=http://bluemage.party:3000/auth/discord/callback
+VITE_DISCORD_REDIRECT_URI=http://bluemage.party/auth/discord/callback
