--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,12 +31,12 @@ jobs:
         env:
          ConnectionStrings__BlueMagePartyContext: ${{ secrets.PROD_CONNECTION_STRING }}
         run: |
-         cd BlueMageParty.Server  # Navigate to your .NET project folder
-         echo "Compiling and running connection test..."
-         dotnet new console -n TestConnection -o TestConnection
-         cp TestConnection.cs TestConnection/Program.cs
-         cd TestConnection
-         dotnet run
+          echo "Compiling and running connection test..."
+          dotnet new console -n TestConnection -o TestConnection
+          cp TestConnection.cs TestConnection/Program.cs
+          cd TestConnection
+          dotnet add package Microsoft.Data.SqlClient
+          dotnet run
 
       # Step 4: Set up Node.js for the Vue.js frontend
       - name: Set up Node.js
