--- a/BlueMageParty.Server/Properties/launchSettings.json
+++ b/BlueMageParty.Server/Properties/launchSettings.json
@@ -14,7 +14,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "http://localhost:5243",
+      "applicationUrl": "http://0.0.0.0:5243", // Updated to bind to all interfaces
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
         "ASPNETCORE_HOSTINGSTARTUPASSEMBLIES": "Microsoft.AspNetCore.SpaProxy"
@@ -25,7 +25,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7015;http://localhost:5243",
+      "applicationUrl": "https://0.0.0.0:7015;http://0.0.0.0:5243", // Updated to bind to all interfaces
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
         "ASPNETCORE_HOSTINGSTARTUPASSEMBLIES": "Microsoft.AspNetCore.SpaProxy"
@@ -42,4 +42,3 @@
     }
   }
 }
-
