--- a/BlueMageParty.Server/appsettings.Production.json
+++ b/BlueMageParty.Server/appsettings.Production.json
@@ -1,6 +1,6 @@
 {
   "FrontendUrl": "https://bluemage.party",
-  "BackendUrl": "http://localhost:5000",
+  "BackendUrl": "https://bluemage.party",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
