--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,9 @@ jobs:
         run: |
           cd BlueMageParty.Server  # Navigate to your .NET project folder
           dotnet publish -c Release -o ./publish
-
+          sudo systemctl daemon-reload
+          sudo systemctl restart BlueMageServer.service
+          
       # Step 4: Set up Node.js for the Vue.js frontend
       - name: Set up Node.js
         uses: actions/setup-node@v2
