--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,8 +25,6 @@ jobs:
         run: |
           cd BlueMageParty.Server  # Navigate to your .NET project folder
           dotnet publish -c Release -o ./publish
-          sudo systemctl daemon-reload
-          sudo systemctl restart BlueMageServer.service
           
       # Step 4: Set up Node.js for the Vue.js frontend
       - name: Set up Node.js
@@ -75,5 +73,7 @@ jobs:
             export EmailSettings__SMTPEmailPassword='$EmailSettings__SMTPEmailPassword' &&
             export EmailSettings__SendGridApiKey='$EmailSettings__SendGridApiKey' &&
             export Discord__ClientSecret='$Discord__ClientSecret' &&
+
+          ssh jculberson@64.227.6.150 "sudo systemctl daemon-reload && sudo systemctl restart BlueMageServer.service"
             nohup dotnet /var/www/BlueMageParty/server/BlueMageParty.Server.dll > /dev/null 2>&1 &
           "
