--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -74,6 +74,6 @@ jobs:
             export EmailSettings__SendGridApiKey='$EmailSettings__SendGridApiKey' &&
             export Discord__ClientSecret='$Discord__ClientSecret' &&
 
-          ssh jculberson@64.227.6.150 "sudo systemctl daemon-reload && sudo systemctl restart BlueMageServer.service"
+          ssh -o StrictHostKeyChecking=no jculberson@64.227.6.150 "sudo systemctl daemon-reload && sudo systemctl restart BlueMageServer.service"
             nohup dotnet /var/www/BlueMageParty/server/BlueMageParty.Server.dll > /dev/null 2>&1 &
           "
