--- a/bluemageparty.client/.env.production
+++ b/bluemageparty.client/.env.production
@@ -1,3 +1,3 @@
-VITE_API_BASE_URL=https://bluemage.party
+VITE_API_BASE_URL=https://bluemage.party/api/
 VITE_DISCORD_CLIENT_ID=1346583826457169940
 VITE_DISCORD_REDIRECT_URI=https://bluemage.party/auth/discord/callback
