--- a/bluemageparty.client/package.json
+++ b/bluemageparty.client/package.json
@@ -19,6 +19,7 @@
     "core-js": "^3.37.1",
     "gsap": "^3.12.7",
     "jsonwebtoken": "^9.0.2",
+    "lodash.debounce": "^4.0.8",
     "material-design-icons-iconfont": "^6.7.0",
     "passport": "^0.7.0",
     "passport-discord": "^0.1.4",
