--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,6 +48,7 @@ jobs:
           EmailSettings__SendGridApiKey: ${{ secrets.SEND_GRID_API_KEY }}
           Discord__ClientSecret: ${{ secrets.DISCORD_CLIENT_SECRET }}
           SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
+          ApiKey: ${{ secrets.ApiKey }}
         run: |
           # Set up SSH
           mkdir -p ~/.ssh
@@ -73,6 +74,7 @@ jobs:
             export EmailSettings__SMTPEmailPassword='$EmailSettings__SMTPEmailPassword' &&
             export EmailSettings__SendGridApiKey='$EmailSettings__SendGridApiKey' &&
             export Discord__ClientSecret='$Discord__ClientSecret' &&
+            export ApiKey='$ApiKey' &&
             sudo systemctl daemon-reload &&
             sudo systemctl restart BlueMageServer.service
           "
