--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ BlueMageParty.Server/publish/
 bluemageparty.client/node_modules/
 node_modules/
 /BlueMageParty.Server/appsettings.Production.json
+bluemageparty.client/.env.local
