--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,7 +48,7 @@ jobs:
           EmailSettings__SendGridApiKey: ${{ secrets.SEND_GRID_API_KEY }}
           Discord__ClientSecret: ${{ secrets.DISCORD_CLIENT_SECRET }}
           SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
-          ApiKey: ${{ secrets.VITE_API_KEY }}
+          VITE_API_KEY: ${{ secrets.VITE_API_KEY }}
         run: |
           # Set up SSH
           mkdir -p ~/.ssh
