--- a/bluemageparty.client/tsconfig.json
+++ b/bluemageparty.client/tsconfig.json
@@ -11,6 +11,8 @@
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "allowJs": true,
+    "outDir": "./dist", // Output directory for compiled files
+    "rootDir": "./src", // Source directory for input files
     "baseUrl": ".",
     "paths": {
       "@/*": ["src/*"]
