--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,6 +34,9 @@ jobs:
 
       # Step 5: Install dependencies and build the Vue.js frontend
       - name: Build Vue.js app
+        env:
+          VITE_API_KEY: ${{ secrets.VITE_API_KEY }}
+          VITE_API_BASE_URL: "https://bluemage.party/api"
         run: |
           cd bluemageparty.client  # Navigate to your Vue.js project folder
           npm install
